First commit for the upgrade to OpenJDK 21 (CONNECTORS-1779)